# appman

./: .gitignore  .travis.yml  LICENSE  pyproject.toml  readme.md  tasks.todo  update-schema.py
.github/workflows/: codeql-analysis.yml
appman/: __init__.py  appman.py  cli.py  config.py  core.py  log.py  util.py
appman/buckets/main/: config.yaml
appman/buckets/main/formulas/: appx.yaml  apt.yaml  brew.yaml  cargo.yaml  choco.yaml  conda.yaml  deb-apt-package.yaml  dpkg-direct.yaml  font-local-share.yaml  go.yaml  npm.yaml  nvm.yaml  pip.yaml  scoop.yaml  sh-script-2.yaml  sh-script.yaml  snap.yaml  tar-cp-package.yaml  vscode-extension.yaml  winget.yaml
appman/data/: config.yaml
appman/data/formulas/: apt-ppa.yaml  apt.yaml  brew.yaml  choco.yaml  deb-apt-package.yaml  dpkg-direct.yaml  exe-setup.yaml  font-local-share.yaml  npm.yaml  ps-script.yaml  sh-script-2.yaml  sh-script-3.yaml  sh-script.yaml  vscode-extensions.yaml  winget.yaml
appman/data/package-managers/: appx.yaml  apt.yaml  brew.yaml  cargo.yaml  npm.yaml  pip.yaml  scoop.yaml  vscode-extensions.yaml
appman/user/: config.yaml
data/: config.yaml
data/formulas/: deb-apt-package.yaml  tar-cp-package.yaml
data/formulas/all/: vscode-extensions.yaml
data/formulas/linux/: font-local-share.yaml
data/formulas/ubuntu/: apt-ppa.yaml  deb-apt-package.yaml
data/formulas/windows/: exe-setup.yaml
data/package-managers/: appx.yaml  apt.yaml  brew.yaml  cargo.yaml  choco.yaml  npm.yaml  pip.yaml  scoop.yaml  winget.yaml
schemas/: config.yaml  formulas.yaml  packages.yaml  user-packages.yaml
tests/: args.py  conftest.py  context.py  print-commands.sh  test_appman.py  test_cli.py  test_data.py  util.py
tests/data/formulas/linux/: sh-script.yaml  tar-cp-package.yaml
tests/data/formulas/ubuntu/: apt-ppa.yaml  dpkg-direct.yaml
tests/data/formulas/windows/: ps-script.yaml
tests/data/package-managers/: appx.yaml  apt.yaml  brew.yaml  cargo.yaml  choco.yaml  npm.yaml  scoop.yaml  winget.yaml
tests/fixtures/: backend.yaml  drivers.yaml  fonts.yaml  provisioned.yaml
tests/fixtures/cli/: 7zip.yaml  chocolatey-cli.yaml  curl.yaml  git.yaml  python.yaml
tests/fixtures/gui/: microsoft-visual-studio-code.yaml  mozilla-firefox.yaml  wireshark.yaml
