[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "appman"
version = "0.2.0"
description = "Cross-platform application management aggregator"
authors = ["Basilio Bogado <541149+basiliskus@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/basiliskus/appman"
repository = "https://github.com/basiliskus/appman.git"

[tool.poetry.scripts]
appman = 'appman.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.3.1"
click = "^8.0.1"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
yamale = "^3.0.6"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]
