[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "appman"
version = "0.4.5"
description = "Cross-platform application management aggregator"
authors = ["Basilio Bogado <541149+basiliskus@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/basiliskus/appman"
repository = "https://github.com/basiliskus/appman.git"

[tool.poetry.scripts]
appman = 'appman.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.3.1"
click = "^8.0.1"
distro = "^1.5.0"
importlib-resources = "^5.2.0"
inquirerpy = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "*"
yamale = "*"
flake8 = "*"
black = "*"

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]
