[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "appman"
version = "0.4.5"
description = "Cross-platform application management aggregator"
authors = ["Basilio Bogado <541149+basiliskus@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/basiliskus/appman"
repository = "https://github.com/basiliskus/appman.git"

[tool.poetry.scripts]
appman = 'appman.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "*"
click = "*"
distro = "*"
importlib-resources = "*"
inquirerpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
yamale = "*"
flake8 = "*"
black = "*"

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]
